--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "production": "vue-cli-service build --mode production"
   },
   "dependencies": {
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
+    "@fullcalendar/interaction": "^4.4.0",
+    "@fullcalendar/timegrid": "^4.4.0",
+    "@fullcalendar/vue": "^4.4.0",
     "axios": "^0.19.2",
+    "buefy": "^0.8.17",
     "core-js": "^3.6.4",
+    "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
     "vue-progressbar": "^0.7.5",
+    "vue-pusher": "^1.0.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
