calender component reacting to event from pusher

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_TITLE=Carsome
-VUE_APP_API_URL='https://carsome.test'
+VUE_APP_API_URL='https://carsome.test/api/'
 
 VUE_APP_PUSHER_APP_ID="998185"
 VUE_APP_PUSHER_API_KEY="4371d3fe7b8822647f9e"
