--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,7 @@
 VUE_APP_TITLE=Carsome
 VUE_APP_API_URL='https://carsome.test'
+
+VUE_APP_PUSHER_APP_ID="998185"
+VUE_APP_PUSHER_API_KEY="4371d3fe7b8822647f9e"
+VUE_APP_PUSHER_SECRET="365f484d00aa4f9cca4d"
+VUE_APP_PUSHER_CLUSTER="ap1"
