--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fullcalendar/core": "^4.4.0",
     "@fullcalendar/daygrid": "^4.4.0",
     "@fullcalendar/interaction": "^4.4.0",
-    "@fullcalendar/timegrid": "^4.4.0",
+    "@fullcalendar/resource-timegrid": "^4.4.0",
     "@fullcalendar/vue": "^4.4.0",
     "axios": "^0.19.2",
     "buefy": "^0.8.17",
