--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^0.19.2",
     "buefy": "^0.8.17",
     "core-js": "^3.6.4",
+    "moment": "^2.25.3",
     "pusher-js": "^6.0.2",
     "tailwindcss": "^1.4.6",
+    "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.6",
