--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 VUE_APP_TITLE=Carsome
-VUE_APP_API_URL='https://carsome.test'
+VUE_APP_API_URL='http://206.189.158.138/api/'
 
 VUE_APP_PUSHER_APP_ID="998185"
 VUE_APP_PUSHER_API_KEY="4371d3fe7b8822647f9e"
